<resources>
    <string name="app_name">SixtCars</string>
    <string name="direction">Get Direction</string>
    <string name="car_info">Info</string>
    <string name="car_name">Car Name:</string>
    <string name="model">Model:</string>
    <string name="fuel_type">Fuel Type:</string>
    <string name="transmission_type">Transmission Type:</string>
    <string name="license_plate">License Plate:</string>
</resources>