<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="sixtCar"
            type="com.kdaydin.sixtcars.data.entities.SixtCar" />

        <import type="com.kdaydin.sixtcars.data.entities.FuelType" />

        <import type="com.kdaydin.sixtcars.R" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bottomsheet"
            android:paddingBottom="80dp"
            app:behavior_hideable="true"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivCarImage"
                imageUrl="@{sixtCar.carImageUrl}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Corner16Radius"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvCarNameTitle"
                style="@style/CairoSemiBold.16.BlueGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:gravity="center"
                android:text="@string/car_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivCarImage" />

            <TextView
                android:id="@+id/tvCarName"
                style="@style/Cairo.16.BlueGray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:gravity="end"
                android:text="@{sixtCar.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvCarNameTitle"
                app:layout_constraintTop_toBottomOf="@id/ivCarImage" />

            <TextView
                android:id="@+id/tvCarModelTitle"
                style="@style/CairoSemiBold.16.BlueGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:gravity="start"
                android:text="@string/model"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCarName" />

            <TextView
                android:id="@+id/tvCarModel"
                style="@style/Cairo.16.BlueGray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:gravity="end"
                android:text="@{sixtCar.modelName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvCarModelTitle"
                app:layout_constraintTop_toBottomOf="@id/tvCarName" />

            <TextView
                android:id="@+id/tvCarFuelTitle"
                style="@style/CairoSemiBold.16.BlueGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:gravity="start"
                android:text="@string/fuel_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCarModel" />

            <TextView
                android:id="@+id/tvCarFuel"
                style="@style/Cairo.16.BlueGray"
                drawbleEnd="@{sixtCar.fuelType==FuelType.E ? R.drawable.ic_ev_station : R.drawable.ic_gas_station}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:gravity="center"
                android:text="@{sixtCar.fuelType.type}"
                app:drawableTint="@color/orange_200"
                app:layout_constraintEnd_toStartOf="@+id/lpiFuel"
                app:layout_constraintStart_toEndOf="@id/tvCarFuelTitle"
                app:layout_constraintTop_toBottomOf="@id/tvCarModel" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/lpiFuel"
                style="@style/Widget.MaterialComponents.LinearProgressIndicator"
                progress="@{sixtCar.fuelLevel}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:max="100"
                app:indicatorColor="@color/orange_500"
                app:layout_constraintBottom_toBottomOf="@id/tvCarFuelTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvCarFuel"
                app:layout_constraintTop_toTopOf="@id/tvCarFuelTitle"
                app:trackColor="@color/orange_200"
                app:trackCornerRadius="2dp"
                app:trackThickness="4dp" />

            <TextView
                android:id="@+id/tvTransmissionTitle"
                style="@style/CairoSemiBold.16.BlueGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:gravity="start"
                android:text="@string/transmission_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCarFuelTitle" />

            <TextView
                android:id="@+id/tvTransmission"
                style="@style/Cairo.16.BlueGray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:gravity="end"
                android:text="@{sixtCar.transmission.transmission}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvTransmissionTitle"
                app:layout_constraintTop_toBottomOf="@id/tvCarFuelTitle" />

            <TextView
                android:id="@+id/tvLicenseTitle"
                style="@style/CairoSemiBold.16.BlueGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:gravity="start"
                android:text="@string/license_plate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTransmissionTitle" />

            <TextView
                android:id="@+id/tvLicense"
                style="@style/Cairo.16.BlueGray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:gravity="end"
                android:text="@{sixtCar.licensePlate}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvLicenseTitle"
                app:layout_constraintTop_toBottomOf="@id/tvTransmissionTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>